--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dbsystem">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,9 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.ChangeInfor"></activity>
+        <activity android:name=".Controller.PlaceDownActivity"></activity>
+        <activity android:name=".Controller.ChangeInfor" />
         <activity android:name=".Controller.DetailsActivity" />
-        <activity android:name=".Controller.PalceActivity" />
+        <activity android:name=".Controller.PalceUpActivity" />
         <activity android:name=".Controller.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
