--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dbsystem">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,18 +19,20 @@
         <activity android:name=".Controller.ChangeInfor" />
         <activity android:name=".Controller.DetailsActivity" />
         <activity android:name=".Controller.PalceUpActivity" />
-        <activity android:name=".Controller.LoginActivity">
+        <activity
+            android:name=".Controller.LoginActivity"
+            android:launchMode="singleTask" />
+        <activity android:name=".Controller.RegisteredActivity" />
+        <activity
+            android:name=".Controller.UserActivity"
+            android:label="@string/title_activity_user" />
+        <activity android:name=".Controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Controller.RegisteredActivity" />
-        <activity
-            android:name=".Controller.UserActivity"
-            android:label="@string/title_activity_user" />
-        <activity android:name=".Controller.MainActivity" />
     </application>
 
 </manifest>
