--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -15,17 +16,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.PlaceDownActivity"></activity>
+        <activity android:name=".Controller.ReportActivity"></activity>
+        <activity android:name=".Controller.ManagerActivity" />
+        <activity android:name=".Controller.AdminActivity" />
+        <activity android:name=".Controller.MyCollectionActivity" />
+        <activity android:name=".Controller.PayActivity" />
+        <activity android:name=".Controller.PlaceDownActivity" />
         <activity android:name=".Controller.ChangeInfor" />
         <activity android:name=".Controller.DetailsActivity" />
         <activity android:name=".Controller.PalceUpActivity" />
-        <activity
-            android:name=".Controller.LoginActivity"
-            android:launchMode="singleTask" />
+        <activity android:name=".Controller.LoginActivity" />
         <activity android:name=".Controller.RegisteredActivity" />
         <activity
             android:name=".Controller.UserActivity"
-            android:label="@string/title_activity_user" />
+            android:label="@string/title_activity_user"
+            android:launchMode="singleTask" />
         <activity android:name=".Controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
