--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="订场系统"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Controller.ReportActivity"></activity>
+        <activity android:name=".Controller.CancelOrederActivity"></activity>
+        <activity android:name=".Controller.ReportActivity" />
         <activity android:name=".Controller.ManagerActivity" />
         <activity android:name=".Controller.AdminActivity" />
         <activity android:name=".Controller.MyCollectionActivity" />
